[gd_scene load_steps=6 format=2]

[ext_resource path="res://interface/mainmenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://interface/Roboto-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://interface/quitconfirmation/QuitConfirmation.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 44
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 44
font_data = ExtResource( 2 )

[node name="MainMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="LabelAndButtons" type="VBoxContainer" parent="."]
margin_left = 799.0
margin_top = 452.0
margin_right = 1120.0
margin_bottom = 628.0

[node name="TitleLabel" type="Label" parent="LabelAndButtons"]
margin_right = 321.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "To the Beat"
align = 1
valign = 1

[node name="StartGameButton" type="Button" parent="LabelAndButtons"]
margin_top = 56.0
margin_right = 321.0
margin_bottom = 114.0
focus_neighbour_bottom = NodePath("../QuitToDesktopButton")
custom_fonts/font = SubResource( 2 )
text = "Start Game"

[node name="OptionsButton" type="Button" parent="LabelAndButtons"]
visible = false
margin_top = 118.0
margin_right = 321.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 2 )
text = "Options"

[node name="QuitToDesktopButton" type="Button" parent="LabelAndButtons"]
margin_top = 118.0
margin_right = 321.0
margin_bottom = 176.0
focus_neighbour_top = NodePath("../StartGameButton")
custom_fonts/font = SubResource( 2 )
text = "Quit to Desktop"

[node name="QuitConfirmation" parent="." instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 560.0
margin_top = 483.0
margin_right = 1360.0
margin_bottom = 597.0
[connection signal="pressed" from="LabelAndButtons/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="LabelAndButtons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="LabelAndButtons/QuitToDesktopButton" to="." method="_on_QuitToDesktopButton_pressed"]
[connection signal="no_quit" from="QuitConfirmation" to="." method="_on_QuitConfirmation_no_quit"]
